--- a/src/sass/components/_module.scss
+++ b/src/sass/components/_module.scss
@@ -2,3 +2,9 @@
 @import "./modal-room.scss";
 @import "./modal-table.scss";
 @import "./modal-price.scss";
+@import "./backdrop";
+@import "./button";
+@import "./container";
+@import "./logo";
+@import "./section-title";
+@import "./section";
