--- a/src/sass/utils/_module.scss
+++ b/src/sass/utils/_module.scss
@@ -1,4 +1,4 @@
-@import "./mixin";
-@import "./no-scroll";
-@import "./variables";
-@import "./visually-hidden";
+@import './mixin';
+@import './no-scroll';
+@import './variables';
+@import './visually-hidden';
