--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,2 +1,9 @@
 .logo {
+  font-family: 'Film P3';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.08;
+  letter-spacing: 0.3em;
+  color: #ffffff;
 }
