--- a/src/sass/components/_module.scss
+++ b/src/sass/components/_module.scss
@@ -6,5 +6,8 @@
 @import "./button";
 @import "./container";
 @import "./logo";
-@import "./section-title";
-@import "./section";
+@import "./section-title-main";
+@import "./section-title-hotel";
+@import "./section-light";
+@import "./section_dark";
+@import "./section-hotel";
