--- a/src/sass/components/_section-title.scss
+++ b/src/sass/components/_section-title.scss
@@ -1,31 +1,25 @@
 .main-title {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 1.20;
     letter-spacing: 0.02em;
-    color: #FFFFFF;
+    color: $colorWhite;
 
     @include tablet {
         font-size: 24px;
-        line-height: 1.20;
-    }
-
-    @include desktop {
-        font-size: 24px;
-        line-height: 1.20;
     }
 }
 
 .hotel-title {
-    font-family: 'Times New Roman';
+    font-family: 'Times New Roman', serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 1.16;
     letter-spacing: 0.05em;
-    color: #000000;
+    color: $colorBlack;
 
     @include tablet {
         font-size: 30px;
