--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -5,6 +5,7 @@
   width: 236px;
   height: 48px;
 
+  font-family: 'Montserrat';
   font-weight: 700;
   font-size: 16px;
   line-height: calc(20/16);
@@ -36,6 +37,7 @@
   width: 100%;
   height: 64px;
 
+  font-family: 'Montserrat';
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24/20);
@@ -66,7 +68,8 @@
 .modal__btn {
   width: 100%;
   height: 64px;
-    
+  
+  font-family: 'Montserrat';
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24/20);
