--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
   font-family: 'Film P3';
   @include font(700, 40px, 1.08, 0.3em);
-  color: var(--colorLogoWhite);
+  color: $colorLogoWhite;
 }
