trying to set up node

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,316 +1,304 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../../../sass/index.css" />
-  </head>
-  <body>
-    <h2 class="is-hidden">About our kitchen</h2>
-    <h4>Amet minim mollit non</h4>
-    <h3>Mimino</h3>
-    <div>
-      <p>
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
-      </p>
-      <picture>
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-1-desk.jpg    1x,
-            ../../../images/restaurant/restaurant-1-desk-2x.jpg 2x
-          "
-          media="(min-width: 1200px)"
-        />
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-1-tab.jpg    1x,
-            ../../../images/restaurant/restaurant-1-tab-2x.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-1-mob.jpg    1x,
-            ../../../images/restaurant/restaurant-1-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class=""
-          src="../../../images/restaurant/restaurant-1-mob.jpg"
-          alt="повар готує на кухні"
-          width="244"
-          height="322"
-        />
-      </picture>
-    </div>
-    <div>
-      <picture>
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-2-desk.jpg    1x,
-            ../../../images/restaurant/restaurant-2-desk-2x.jpg 2x
-          "
-          media="(min-width: 1200px)"
-        />
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-2-tab.jpg    1x,
-            ../../../images/restaurant/restaurant-2-tab-2x.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
-            ../../../images/restaurant/restaurant-2-mob.jpg    1x,
-            ../../../images/restaurant/restaurant-2-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class=""
-          src="../../../images/restaurant/restaurant-2-mob.jpg"
-          alt="м'ясо на дошці для нарізання"
-          width="200"
-          height="278"
-        />
-      </picture>
-      <p>
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
-      </p>
-    </div>
+<h2 class="is-hidden">About our kitchen</h2>
+<h4>Amet minim mollit non</h4>
+<h3>Mimino</h3>
+<div>
+  <p>
+    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+    Velit officia consequat duis enim velit mollit. Exercitation veniam
+    consequat sunt nostrud amet.
+  </p>
+  <picture>
+    <source
+      srcset="
+        ./images/restaurant/restaurant-1-desk.jpg    1x,
+        ./images/restaurant/restaurant-1-desk-2x.jpg 2x
+      "
+      media="(min-width: 1200px)"
+    />
+    <source
+      srcset="
+        ./images/restaurant/restaurant-1-tab.jpg    1x,
+        ./images/restaurant/restaurant-1-tab-2x.jpg 2x
+      "
+      media="(min-width: 768px)"
+    />
+    <source
+      srcset="
+        ./images/restaurant/restaurant-1-mob.jpg    1x,
+        ./images/restaurant/restaurant-1-mob-2x.jpg 2x
+      "
+      media="(min-width: 414px)"
+    />
+    <img
+      class=""
+      src="./images/restaurant/restaurant-1-mob.jpg"
+      alt="повар готує на кухні"
+      width="244"
+      height="322"
+    />
+  </picture>
+</div>
+<div>
+  <picture>
+    <source
+      srcset="
+        ./images/restaurant/restaurant-2-desk.jpg    1x,
+        ./images/restaurant/restaurant-2-desk-2x.jpg 2x
+      "
+      media="(min-width: 1200px)"
+    />
+    <source
+      srcset="
+        ./images/restaurant/restaurant-2-tab.jpg    1x,
+        ./images/restaurant/restaurant-2-tab-2x.jpg 2x
+      "
+      media="(min-width: 768px)"
+    />
+    <source
+      srcset="
+        ./images/restaurant/restaurant-2-mob.jpg    1x,
+        ./images/restaurant/restaurant-2-mob-2x.jpg 2x
+      "
+      media="(min-width: 414px)"
+    />
+    <img
+      class=""
+      src="./images/restaurant/restaurant-2-mob.jpg"
+      alt="м'ясо на дошці для нарізання"
+      width="200"
+      height="278"
+    />
+  </picture>
+  <p>
+    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+    Velit officia consequat duis enim velit mollit. Exercitation veniam
+    consequat sunt nostrud amet.
+  </p>
+</div>
 
-    <div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-3-desk.jpg    1x,
-              ../../../images/restaurant/restaurant-3-desk-2x.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-3-tab.jpg    1x,
-              ../../../images/restaurant/restaurant-3-tab-2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-3-mob.jpg    1x,
-              ../../../images/restaurant/restaurant-3-mob-2x.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/restaurant/restaurant-3-mob.jpg"
-            alt="людина смикає з рук борошно"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-4-desk.jpg    1x,
-              ../../../images/restaurant/restaurant-4-desk-2x.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-4-tab.jpg    1x,
-              ../../../images/restaurant/restaurant-4-tab-2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/restaurant/restaurant-4-mob.jpg    1x,
-              ../../../images/restaurant/restaurant-4-mob-2x.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/restaurant/restaurant-4-mob.jpg"
-            alt="хінкалі на тарілці"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/sliders/slider-6-desk.jpg 1x,
-              ../../../images/sliders/slider-6-desk.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-6-tab.jpg 1x,
-              ../../../images/sliders/slider-6-tab.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-6-mob.jpg 1x,
-              ../../../images/sliders/slider-6-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/sliders/slider-6-mob.jpg"
-            alt="наливають чай у чашку"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/sliders/slider-7-desk.jpg 1x,
-              ../../../images/sliders/slider-7-desk.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-7-tab.jpg 1x,
-              ../../../images/sliders/slider-7-tab.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-7-mob.jpg 1x,
-              ../../../images/sliders/slider-7-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/sliders/slider-7-mob.jpg"
-            alt="устриці та шампанське"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/sliders/slider-9-desk.jpg 1x,
-              ../../../images/sliders/slider-9-desk.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-9-tab.jpg 1x,
-              ../../../images/sliders/slider-9-tab.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-9-mob.jpg 1x,
-              ../../../images/sliders/slider-9-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/sliders/slider-9-mob.jpg"
-            alt="гарно сервірований стіл на вулиці"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/sliders/slider-15-desk.jpg 1x,
-              ../../../images/sliders/slider-15-desk.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-15-tab.jpg 1x,
-              ../../../images/sliders/slider-15-tab.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-15-mob.jpg 1x,
-              ../../../images/sliders/slider-15-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/sliders/slider-15-mob.jpg"
-            alt="гарно сервірований стіл у приміщенні"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div>
-        <picture>
-          <source
-            srcset="
-              ../../../images/sliders/slider-16-desk.jpg 1x,
-              ../../../images/sliders/slider-16-desk.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-16-tab.jpg 1x,
-              ../../../images/sliders/slider-16-tab.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ../../../images/sliders/slider-16-mob.jpg 1x,
-              ../../../images/sliders/slider-16-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class=""
-            src="../../../images/sliders/slider-16-mob.jpg"
-            alt="сніданок у ліжко"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-    </div>
-  </body>
-</html>
+<div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/restaurant/restaurant-3-desk.jpg    1x,
+          ./images/restaurant/restaurant-3-desk-2x.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/restaurant/restaurant-3-tab.jpg    1x,
+          ./images/restaurant/restaurant-3-tab-2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/restaurant/restaurant-3-mob.jpg    1x,
+          ./images/restaurant/restaurant-3-mob-2x.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/restaurant/restaurant-3-mob.jpg"
+        alt="людина смикає з рук борошно"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/restaurant/restaurant-4-desk.jpg    1x,
+          ./images/restaurant/restaurant-4-desk-2x.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/restaurant/restaurant-4-tab.jpg    1x,
+          ./images/restaurant/restaurant-4-tab-2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/restaurant/restaurant-1-mob.jpg    1x,
+          ./images/restaurant/restaurant-2-mob-2x.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/restaurant/restaurant-1-mob.jpg"
+        alt="хінкалі на тарілці"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/sliders/slider-6-desk.jpg 1x,
+          ./images/sliders/slider-6-desk.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-6-tab.jpg 1x,
+          ./images/sliders/slider-6-tab.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-6-mob.jpg 1x,
+          ./images/sliders/slider-6-mob.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/sliders/slider-6-mob.jpg"
+        alt="наливають чай у чашку"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/sliders/slider-7-desk.jpg 1x,
+          ./images/sliders/slider-7-desk.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-7-tab.jpg 1x,
+          ./images/sliders/slider-7-tab.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-7-mob.jpg 1x,
+          ./images/sliders/slider-7-mob.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/sliders/slider-7-mob.jpg"
+        alt="устриці та шампанське"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/sliders/slider-9-desk.jpg 1x,
+          ./images/sliders/slider-9-desk.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-9-tab.jpg 1x,
+          ./images/sliders/slider-9-tab.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-9-mob.jpg 1x,
+          ./images/sliders/slider-9-mob.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/sliders/slider-9-mob.jpg"
+        alt="гарно сервірований стіл на вулиці"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/sliders/slider-15-desk.jpg 1x,
+          ./images/sliders/slider-15-desk.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-15-tab.jpg 1x,
+          ./images/sliders/slider-15-tab.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-15-mob.jpg 1x,
+          ./images/sliders/slider-15-mob.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/sliders/slider-15-mob.jpg"
+        alt="гарно сервірований стіл у приміщенні"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+  <div>
+    <picture>
+      <source
+        srcset="
+          ./images/sliders/slider-16-desk.jpg 1x,
+          ./images/sliders/slider-16-desk.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-16-tab.jpg 1x,
+          ./images/sliders/slider-16-tab.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/sliders/slider-16-mob.jpg 1x,
+          ./images/sliders/slider-16-mob.jpg 2x
+        "
+        media="(min-width: 414px)"
+      />
+      <img
+        class=""
+        src="./images/sliders/slider-16-mob.jpg"
+        alt="сніданок у ліжко"
+        width="245"
+        height="245"
+      />
+    </picture>
+  </div>
+</div>
