Save before sleep

--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -1,15 +1,18 @@
 <section class="menu">
-  <div class="container">
+  <div class="menu__container container">
     <h2 class="menu__title hotel-title">Меню ресторану</h2>
 
     <table class="menu__table">
+      <col class="menu__column-one" />
+      <col class="menu__column-two" />
+      <col class="menu__column-three" />
       <thead>
         <tr>
           <th class="menu__subtitle" colspan="3">Гарячі страви</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody class="menu__data">
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Борщ з телятини з квасолею</p>
             <p class="menu__ingredients">
@@ -20,7 +23,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">240 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Суп сирний з куркою</p>
             <p class="menu__ingredients">
@@ -30,7 +33,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">200 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Паста карбонара</p>
             <p class="menu__ingredients">
@@ -40,7 +43,7 @@
           <td class="menu__weight">350 г</td>
           <td class="menu__price">430 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Стейк зі свинини</p>
             <p class="menu__ingredients">
@@ -51,7 +54,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">500 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Горбуша в соусі з білого вина</p>
             <p class="menu__ingredients">
@@ -70,8 +73,8 @@
           <th class="menu__subtitle" colspan="3">Гарніри та закуски</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody class="menu__data">
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Запечені овочі</p>
             <p class="menu__ingredients">Кабачок, перець, помідор, баклажан</p>
@@ -79,7 +82,7 @@
           <td class="menu__weight">200 г</td>
           <td class="menu__price">230 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Картопля фрі</p>
             <p class="menu__ingredients">Картопля, соус томатний</p>
@@ -87,7 +90,7 @@
           <td class="menu__weight">150 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Картопля по-селянськи</p>
             <p class="menu__ingredients">Картопля, спеції, соус пікантний</p>
@@ -95,7 +98,7 @@
           <td class="menu__weight">150 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Хрумкі соління з бочки</p>
             <p class="menu__ingredients">
@@ -106,7 +109,7 @@
           <td class="menu__weight">250 г</td>
           <td class="menu__price">350 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Крильця курячі в медовому соусі</p>
             <p class="menu__ingredients">
@@ -126,8 +129,8 @@
           <th class="menu__subtitle" colspan="3">Салати</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody class="menu__data">
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Цезар з куркою</p>
             <p class="menu__ingredients">
@@ -138,7 +141,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">450 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Цезар з креветками</p>
             <p class="menu__ingredients">
@@ -149,7 +152,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Грецький салат</p>
             <p class="menu__ingredients">
@@ -160,7 +163,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">280 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">М’ясний салат</p>
             <p class="menu__ingredients">
@@ -180,22 +183,22 @@
           <th class="menu__subtitle" colspan="3">Десерти</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody class="menu__data">
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Торт наполеон</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Торт маковий</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Тірамісу</p>
           </td>
@@ -211,36 +214,36 @@
           <th class="menu__subtitle" colspan="3">Напої</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody class="menu__data">
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Чай чорний/зелений</p>
           </td>
           <td class="menu__weight">500 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Еспресо</p>
           </td>
           <td class="menu__weight">30 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Американо</p>
           </td>
           <td class="menu__weight">150 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Капучино</p>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr>
+        <tr class="menu__row">
           <td>
             <p class="menu__meal">Лате</p>
           </td>
@@ -250,6 +253,8 @@
       </tbody>
     </table>
 
-    <button class="btn" type="button">Забронювати столик</button>
+    <button class="menu__button button" type="button">
+      Забронювати столик
+    </button>
   </div>
 </section>
