--- a/src/sass/pages/restaurant/_menu.scss
+++ b/src/sass/pages/restaurant/_menu.scss
@@ -1,3 +1,61 @@
 .menu {
   color: $colorBlack;
+  background-color: $colorBgLemon;
+}
+
+.menu__container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.menu__title {
+  margin-bottom: 32px;
+
+  font-size: 32px;
+  line-height: calc(37 / 32);
+  letter-spacing: normal;
+}
+
+.menu__subtitle {
+  text-align: left;
+
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  letter-spacing: normal;
+}
+
+.menu__table {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+
+  &:not(:last-of-type) {
+    margin-bottom: 16px;
+  }
+
+  &:last-of-type {
+    margin-bottom: 35px;
+  }
+}
+
+.menu__column-one {
+}
+
+.menu__data {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.menu__row {
+  //   display: flex;
+  //   justify-content: space-between;
+}
+
+.menu__meal {
+}
+
+.menu__ingredients {
+  margin-top: 4px;
 }
