--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -102,7 +102,7 @@
       </picture>
     </li>
   </ul>
-  <a href="./details-hotel.html" class="room-for-3__details btn">Детальніше</a>
+  <a href="#" class="room-for-3__details btn">Детальніше</a>
   <button type="button" class="room-for-3__btn-price btn">
     Переглянути ціни
   </button>
