--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,42 +1,50 @@
-<footer class="footer footer__wrapper">
-    <div class="container">
+<footer class="footer ">
+    <div class="container footer__container">
         <a href="./index.html" class="logo footer__logo">MIMIHO</a> 
-        <ul class="items footer__menu">
-            <li class="item">Головна</li>
-            <li class="item">Ресторан</li>
-            <li class="item">Готель</li>
-        </ul>
-        <ul class="items footer__social "> 
-            <li class="footer__icon thumb__social">
-                <a href="" class="icon-social__footer icon-social">
-                    <span class="icon-social__title">Instagram</span>
-                    <svg class="icon-social__icon" width="24" height="24">
-                        <use
-                        href="./images/sprite.svg#icon-instagram"
-                        ></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer__icon thumb__social">
-                <a href="" class="icon-social__footer icon-social">
-                    <span class="icon-social__title">Facebook</span>
-                    <svg class="icon-social__icon" width="24" height="24">
-                        <use
-                          href="./images/sprite.svg#icon-facebook"
-                        ></use>
-                      </svg>
-                </a>
-            </li>
-            <li class="footer__icon thumb__social">
-                <a href="" class="icon-social__footer icon-social">
-                    <span class="icon-social__title">Telegram</span>
-                    <svg class="icon-social__icon" width="24" height="24">
-                        <use
-                          href="./images/sprite.svg#icon-telegram"
-                        ></use>
-                      </svg>
-                </a>
-            </li>
-        </ul>
+        <div class="footer__wrapper-lists">
+            <ul class="items footer__menu">
+                <li class="item">Головна</li>
+                <li class="item">Ресторан</li>
+                <li class="item">Готель</li>
+            </ul>
+            <ul class="items footer__social "> 
+                <li class="footer__icon thumb__social">
+                    <a href="" class="icon-social__footer icon-social">
+                        <span class="icon-social__title">Instagram</span>
+                        <div class="icon-social__thumb">
+                            <svg class="icon-social__icon" width="24" height="24">
+                                <use
+                                href="./images/sprite.svg#icon-instagram"
+                                ></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+                <li class="footer__icon thumb__social">
+                    <a href="" class="icon-social__footer icon-social">
+                        <span class="icon-social__title">Facebook</span>
+                        <div class="icon-social__thumb">
+                            <svg class="icon-social__icon" width="24" height="24">
+                                <use
+                                href="./images/sprite.svg#icon-facebook"
+                                ></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+                <li class="footer__icon thumb__social">
+                    <a href="" class="icon-social__footer icon-social">
+                        <span class="icon-social__title">Telegram</span>
+                        <div class="icon-social__thumb">
+                            <svg class="icon-social__icon" width="24" height="24">
+                                <use
+                                href="./images/sprite.svg#icon-telegram"
+                                ></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>  
 </footer>
