--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -1,49 +1,101 @@
 .footer {
-}
-.footer__wrapper {
+    // display: flex;
     padding: 40px 0px;
     background-color: #0E0C07;
     color: $colorAccentYellow;
 }
+.footer__container{
+    display: flex;
+}
+.footer__wrapper-lists {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    @include tablet {
+        flex-direction: row;
+        width: 50%;
+    }
+}
 
 .footer__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 66%;
+    @include tablet {
+        width: 50%;
+    }
 
 }
 
 .footer__menu {
+    display: flex;
+    // flex-wrap: wrap;
+    flex-direction: column;
+    gap: 16px;
     font-family: 'Montserrat';
     @include font (500, 20px, 1.2, .02);
+    @include tablet {
+        width: 50%;
+    }
 }
 
 .items {
  
 }
+
+.footer__social{
+display: flex;
+gap: 20px;
+// padding-right: 30px;
+@include tablet {
+    flex-direction: column;
+    gap: 12px;
+
+}
+}
 .item {
     
 }
-.footer__icon {
-}
+
 .thumb__social {
 }
 .icon-social__footer {
+    @include tablet{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 143px;
+        height: 40px;
+        border: .5px solid $colorAccentYellow;
+        border-radius: 2px;
+
+    }
 }
 .icon-social {
 }
+
+
+
+.footer__icon {
+
+}
 .icon-social__title {
-    // display: none;
-    @include font (400, 16px, 1.25, .02);
-    // font-style: normal;
-    // font-weight: 400;
-
-    // line-height: 20px;
-    /* identical to box height */
-
-    // letter-spacing: 0.02em;
-
-    /* Akzent yellow */
-
+    display: none;
+    font-weight: 400;
+    line-height: 1.25;
     color: $colorAccentYellow;
+    @include tablet {
+        display: inline-block;
+        padding-left: 12px;
+    }
+}
+.icon-social__thumb{
+    @include tablet {
+        padding-right: 12px;
+    }
 }
 .icon-social__icon {
     fill: $colorAccentYellow;
+
 }
