--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,13 +3,13 @@
         <a href="./index.html" class="logo footer__logo">MIMIHO</a> 
         <div class="footer__wrapper-lists">
             <ul class="items footer__menu">
-                <li class="item">Головна</li>
-                <li class="item">Ресторан</li>
-                <li class="item">Готель</li>
+                <li class="item"><a href="./index.html">Головна</a> </li>
+                <li class="item"><a href="./restaurant.html">Ресторан</a></li>
+                <li class="item"><a href="./hotel.html">Готель</a></li>
             </ul>
             <ul class="items footer__social "> 
                 <li class="footer__icon thumb__social">
-                    <a href="" class="icon-social__footer icon-social">
+                    <a href="https://www.instagram.com/" target="blank" class="icon-social__footer icon-social">
                         <span class="icon-social__title">Instagram</span>
                         <div class="icon-social__thumb">
                             <svg class="icon-social__icon" width="24" height="24">
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li class="footer__icon thumb__social">
-                    <a href="" class="icon-social__footer icon-social">
+                    <a href="https://www.facebook.com/"  target="blank" class="icon-social__footer icon-social">
                         <span class="icon-social__title">Facebook</span>
                         <div class="icon-social__thumb">
                             <svg class="icon-social__icon" width="24" height="24">
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="footer__icon thumb__social">
-                    <a href="" class="icon-social__footer icon-social">
+                    <a href="https://web.telegram.org/k/"  target="blank" class="icon-social__footer icon-social">
                         <span class="icon-social__title">Telegram</span>
                         <div class="icon-social__thumb">
                             <svg class="icon-social__icon" width="24" height="24">
