--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -3,16 +3,11 @@
     <h2 class="menu__title hotel-title">Меню ресторану</h2>
 
     <table class="menu__table">
-      <col class="menu__column-one" />
-      <col class="menu__column-two" />
-      <col class="menu__column-three" />
-      <thead>
+      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Гарячі страви</th>
         </tr>
-      </thead>
-      <tbody class="menu__data">
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Борщ з телятини з квасолею</p>
             <p class="menu__ingredients">
@@ -23,7 +18,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">240 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Суп сирний з куркою</p>
             <p class="menu__ingredients">
@@ -33,7 +28,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">200 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Паста карбонара</p>
             <p class="menu__ingredients">
@@ -43,7 +38,7 @@
           <td class="menu__weight">350 г</td>
           <td class="menu__price">430 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Стейк зі свинини</p>
             <p class="menu__ingredients">
@@ -54,7 +49,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">500 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Горбуша в соусі з білого вина</p>
             <p class="menu__ingredients">
@@ -65,16 +60,12 @@
           <td class="menu__price">400 грн</td>
         </tr>
       </tbody>
-    </table>
 
-    <table class="menu__table">
-      <thead>
+      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Гарніри та закуски</th>
         </tr>
-      </thead>
-      <tbody class="menu__data">
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Запечені овочі</p>
             <p class="menu__ingredients">Кабачок, перець, помідор, баклажан</p>
@@ -82,7 +73,7 @@
           <td class="menu__weight">200 г</td>
           <td class="menu__price">230 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Картопля фрі</p>
             <p class="menu__ingredients">Картопля, соус томатний</p>
@@ -90,7 +81,7 @@
           <td class="menu__weight">150 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Картопля по-селянськи</p>
             <p class="menu__ingredients">Картопля, спеції, соус пікантний</p>
@@ -98,7 +89,7 @@
           <td class="menu__weight">150 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Хрумкі соління з бочки</p>
             <p class="menu__ingredients">
@@ -109,7 +100,7 @@
           <td class="menu__weight">250 г</td>
           <td class="menu__price">350 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Крильця курячі в медовому соусі</p>
             <p class="menu__ingredients">
@@ -121,16 +112,12 @@
           <td class="menu__price">420 грн</td>
         </tr>
       </tbody>
-    </table>
 
-    <table class="menu__table">
-      <thead>
+      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Салати</th>
         </tr>
-      </thead>
-      <tbody class="menu__data">
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Цезар з куркою</p>
             <p class="menu__ingredients">
@@ -141,7 +128,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">450 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Цезар з креветками</p>
             <p class="menu__ingredients">
@@ -152,7 +139,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Грецький салат</p>
             <p class="menu__ingredients">
@@ -163,7 +150,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">280 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">М’ясний салат</p>
             <p class="menu__ingredients">
@@ -175,30 +162,26 @@
           <td class="menu__price">300 грн</td>
         </tr>
       </tbody>
-    </table>
 
-    <table class="menu__table">
-      <thead>
+      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Десерти</th>
         </tr>
-      </thead>
-      <tbody class="menu__data">
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Торт наполеон</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Торт маковий</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Тірамісу</p>
           </td>
@@ -206,44 +189,40 @@
           <td class="menu__price">260 грн</td>
         </tr>
       </tbody>
-    </table>
 
-    <table class="menu__table">
-      <thead>
+      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Напої</th>
         </tr>
-      </thead>
-      <tbody class="menu__data">
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Чай чорний/зелений</p>
           </td>
           <td class="menu__weight">500 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Еспресо</p>
           </td>
           <td class="menu__weight">30 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Американо</p>
           </td>
           <td class="menu__weight">150 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Капучино</p>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
-        <tr class="menu__row">
+        <tr>
           <td>
             <p class="menu__meal">Лате</p>
           </td>
