Add styles for table

--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -3,7 +3,7 @@
     <h2 class="menu__title hotel-title">Меню ресторану</h2>
 
     <table class="menu__table">
-      <tbody>
+      <tbody class="menu__data">
         <tr>
           <th class="menu__subtitle" colspan="3">Гарячі страви</th>
         </tr>
@@ -59,9 +59,7 @@
           <td class="menu__weight">400 г</td>
           <td class="menu__price">400 грн</td>
         </tr>
-      </tbody>
 
-      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Гарніри та закуски</th>
         </tr>
@@ -113,7 +111,7 @@
         </tr>
       </tbody>
 
-      <tbody>
+      <tbody class="menu__data">
         <tr>
           <th class="menu__subtitle" colspan="3">Салати</th>
         </tr>
@@ -161,9 +159,7 @@
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
-      </tbody>
 
-      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Десерти</th>
         </tr>
@@ -188,9 +184,7 @@
           <td class="menu__weight">120 г</td>
           <td class="menu__price">260 грн</td>
         </tr>
-      </tbody>
 
-      <tbody>
         <tr>
           <th class="menu__subtitle" colspan="3">Напої</th>
         </tr>
