--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -1,8 +1,11 @@
 .footer {
     padding: 40px 0px;
     width: 100%;
-    background-color: #0E0C07;
+    background-color: $colorBgFooter;
     color: $colorAccentYellow;
+    @include tablet{
+        padding: 80px 0px;
+    }
 }
 .footer__container{
     display: flex;
@@ -25,6 +28,8 @@
     width: 66%;
     @include tablet {
         width: 50%;
+        font-size: 64px;
+        line-height: 1.08;
     }
 
 }
@@ -44,27 +49,17 @@
     }
 }
 
-.items {
- 
-}
-
 .footer__social{
 display: flex;
 gap: 20px;
 // padding-right: 30px;
 @include tablet {
-    flex-direction: column;
+    flex-direction: column-reverse;
     margin-left: 8px;
     gap: 12px;
-
 }
-}
-.item {
-    
 }
 
-.thumb__social {
-}
 .icon-social__footer {
     @include tablet{
         display: flex;
@@ -77,14 +72,7 @@ gap: 20px;
 
     }
 }
-.icon-social {
-}
 
-
-
-.footer__icon {
-
-}
 .icon-social__title {
     display: none;
     font-weight: 400;
@@ -96,6 +84,7 @@ gap: 20px;
     }
 }
 .icon-social__thumb{
+    // display: flex;
     @include tablet {
         padding-right: 12px;
     }
